--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 * {
     margin: 0;
     padding: 0;
+    width:100vw;
+    height:100vh;
+    overflow:hidden;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
