--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
     text-decoration: none;
     border: none;
     outline: none;
-    scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -125,27 +124,6 @@ section {
     background-position: -33rem 0;
 }
 
-.home.show-animate .home-content .text-animate h3 {
-    animation: homeBgText 6s linear infinite;
-    animation-delay: 2s;
-}
-
-.home-content .text-animate h3::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    border-right: 2px solid var(--main-color);
-    z-index: -1;
-}
-
-.home.show-animate .home-content .text-animate h3::before {
-    animation: homeCursorText 6s linear infinite;
-    animation-delay: 2s;
-}
-
 .home-content p {
     position: relative;
     font-size: 1.6rem;
@@ -179,7 +157,7 @@ section {
     transition: .5s;
 }
 
-.btn-box .btn:hover{
+.btn-box .btn:hover {
     color: var(--main-color);
 }
 
@@ -696,53 +674,23 @@ span {
     color: var(--main-color);
 }
 
-/* ANIMATION RELOAD AND SCROLL */
-.animate {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--bg-color);
-    z-index: 98;
-}
-
-.animate.home-img {
-    width: 50%;
-}
-
+/* Remove Animation Reload & Scroll */
+.animate,
+.animate.home-img,
 .logo .animate,
 .navbar .animate,
 #menu-icon .animate,
-.home.show-animate .animate {
-    animation: showRight 1s ease forwards;
-    animation-delay: calc(.3s * var(--i));
-}
-
-.animate.scroll {
-    transition: .1s ease;
-    transition-delay: calc(.3s / var(--i));
-    animation: none;
-}
-
+.home.show-animate .animate,
+.animate.scroll,
 section:nth-child(odd) .animate.scroll,
-.footer .animate.scroll {
-    background: var(--second-bg-color);
-}
-
-.education .education-box .animate.scroll {
-    width: 105%;
-}
-
+.education .education-box .animate.scroll,
 .about.show-animate .animate.scroll,
 .education.show-animate .animate.scroll,
 .skills.show-animate .animate.scroll,
 .contact.show-animate .animate.scroll, 
 .footer.show-animate .animate.scroll {
-    transition-delay: calc(.3s * var(--i));
-    width: 0;
+    animation: none !important;
 }
-
 
 /* BREAKPOINTS */
 @media (max-width: 1200px) {
@@ -901,7 +849,6 @@ section:nth-child(odd) .animate.scroll,
     }
 }
 
-
 /* KEYFRAMES ANIMATION */
 @keyframes homeBgText {
 
@@ -944,8 +891,70 @@ section:nth-child(odd) .animate.scroll,
     }
 }
 
-@keyframes showRight {
+@keyframes spinner {
+    0% {
+        transform: translate(-50%, -50%) rotate(0);
+    }
+
     100% {
-        width: 0;
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+@keyframes showContent {
+    0% {
+        transform: translateX(-50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes showSkillContent {
+    0% {
+        transform: translateY(-10%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes showSkillBar {
+    0% {
+        transform: scaleX(0);
+    }
+
+    100% {
+        transform: scaleX(1);
+    }
+}
+
+@keyframes showContactForm {
+    0% {
+        transform: translateY(10%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes showFooter {
+    0% {
+        transform: translateY(10%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
     }
 }
